--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "daisyui": "^4.12.13",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
