--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "postcss": "8.4.47"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run tailwind; react-scripts start",
     "tailwind": "npx tailwindcss -i ./src/tailwind/input.css -o ./src/tailwind/daizy.css",
     "tailwindProd": "npx tailwindcss -i ./src/tailwind/input.css -o ./src/tailwind/daizy.css --minify",
-    "build": "react-scripts build"
+    "build": "npm run tailwindProd; react-scripts build"
   },
   "eslintConfig": {
     "extends": [
